# xml-to-json

./: .gitignore  LICENSE  README.md  stack.yaml  test.sh  xml-to-json.cabal
src/: XmlToJson.hs  xml-to-json.hs
src-exec/: Main.hs  StreamingMain.hs  TagSoupTest.hs
src/Text/XML/JSON/: StreamingXmlToJson.hs  XmlToJson.hs
test/: .gitignore  Test.hs  example.js  example.xml  expected_a.js  expected_default.js  expected_no_collapse_text.js  expected_no_collapse_text_pattern.js  expected_s.js  expected_sam.js  malformed.xml  output.js  run_tests.sh  shallow.xml  simple.xml  small.xml  test_tagsoup.sh
