name:                xml-to-json
version:             1.0.1
synopsis:            Library and command line tool for converting XML files to json
description:         
             This library converts XMLs to json format, gaining readability while losing information such as comments, attribute ordering, and such. 
			 The package also includes an executable to directly invoke the library on files (or urls on non-windows platforms).
             The main purpose is to convert legacy XML-based data into a format that can be imported into JSON databases such as CouchDB and MongoDB.
             .
             See <https://github.com/sinelaw/xml-to-json#readme> for details and usage.
license:             MIT
license-file:        LICENSE
author:              Noam Lewis
maintainer:          jones.noamle@gmail.com
homepage:            https://github.com/sinelaw/xml-to-json
bug-reports:         https://github.com/sinelaw/xml-to-json/issues
copyright:           Copyright Noam Lewis, 2014
category:            Web, XML
build-type:          Simple
cabal-version:       >=1.8
Extra-Source-Files:
  README.md

source-repository head
  type:     git
  location: https://github.com/sinelaw/xml-to-json.git
  
library
  exposed-modules: Text.XML.JSON.XmlToJson, Text.XML.JSON.StreamingXmlToJson
  extensions: CPP
  hs-source-dirs: src
  build-depends:   base >= 4.5.0 && < 4.8, hxt, aeson < 0.7, text, unordered-containers, hashable, vector, bytestring, hxt-tagsoup, hxt-expat, containers, regex-posix, tagsoup
  if (!os(windows))
    build-depends:  hxt-curl, curl
    cpp-options: -DUseCurl
  ghc-options: -Wall  -rtsopts
  Ghc-Prof-Options:  -prof -auto-all -caf-all 
  
executable xml-to-json
  main-is: Main.hs             
  hs-source-dirs: src-exec
  extensions: CPP
  build-depends:   base >= 4.5.0 && < 4.8, xml-to-json
  ghc-options: -Wall  -rtsopts
  Ghc-Prof-Options:  -prof -auto-all  -caf-all
  
executable xml-to-json-fast
  main-is: StreamingMain.hs             
  hs-source-dirs: src-exec
  extensions: CPP
  build-depends:   base >= 4.5.0 && < 4.8, tagsoup, text, directory, process, aeson < 0.7, bytestring, vector, containers, xml-to-json
  ghc-options: -Wall  -rtsopts
  Ghc-Prof-Options:  -prof -auto-all  -caf-all
