name:                xml-to-json
version:             2.0.1
synopsis:            Library and command line tool for converting XML files to json
description:         
                     The xml-to-json executable (and library) converts XMLs to json format, gaining readability while losing information such as comments, attribute ordering, and such.
                     .
                     For files that are slow to process, please use 'xml-to-json-fast' which (starting with version 2.0.0) resides in its own package.
                     .
                     The original purpose was to convert legacy XML-based data into a format that can be imported into JSON databases such as CouchDB and MongoDB.
                     .
                     The package also includes an executable to directly invoke the library on files (or urls on non-windows platforms).
                     .
                     See <https://github.com/sinelaw/xml-to-json#readme> for details and usage.
license:             MIT
license-file:        LICENSE
author:              Noam Lewis
maintainer:          jones.noamle@gmail.com
homepage:            https://github.com/sinelaw/xml-to-json
bug-reports:         https://github.com/sinelaw/xml-to-json/issues
copyright:           Copyright Noam Lewis, 2014
category:            Web, XML
build-type:          Simple
cabal-version:       >=1.8
Extra-Source-Files:
  README.md

source-repository head
  type:     git
  location: https://github.com/sinelaw/xml-to-json.git
  
library
  exposed-modules: Text.XML.JSON.XmlToJson
  extensions: CPP
  hs-source-dirs: src
  build-depends:   base >= 4.5.0 && < 5, hxt, aeson, text, unordered-containers, hashable, vector, bytestring, hxt-tagsoup, hxt-expat, containers, regex-posix, tagsoup
  if (!os(windows))
    build-depends:  hxt-curl, curl
    cpp-options: -DUseCurl
  ghc-options: -Wall  -rtsopts
  Ghc-Prof-Options:  -prof -auto-all -caf-all 
  
executable xml-to-json
  main-is: Main.hs             
  hs-source-dirs: src-exec
  extensions: CPP
  build-depends:   base >= 4.5.0 && < 5, xml-to-json
  ghc-options: -Wall  -rtsopts
  Ghc-Prof-Options:  -prof -auto-all  -caf-all
  
